# manipulator_robot

./: README.md
.github/workflows/: build.yml  main-config.yml
arduinobot_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
arduinobot_ws/devel/include/arduinobot_contol/: AngleConvert.h  AngleConvertRequest.h  AngleConvertResponse.h
arduinobot_ws/devel/include/arduinobot_controller/: AngleConvert.h  AngleConvertRequest.h  AngleConvertResponse.h  AnglesConverter.h  AnglesConverterRequest.h  AnglesConverterResponse.h
arduinobot_ws/devel/include/arduinobot_pub_sub/: AddTwoInts.h  AddTwoIntsRequest.h  AddTwoIntsResponse.h
arduinobot_ws/devel/include/arduinobot_remote/: ArduinobotTaskAction.h  ArduinobotTaskActionAction.h  ArduinobotTaskActionActionFeedback.h  ArduinobotTaskActionActionGoal.h  ArduinobotTaskActionActionResult.h  ArduinobotTaskActionFeedback.h  ArduinobotTaskActionGoal.h  ArduinobotTaskActionResult.h  ArduinobotTaskFeedback.h  ArduinobotTaskGoal.h  ArduinobotTaskResult.h
arduinobot_ws/devel/lib/arduinobot_contol/: angles_converters_cpp  arduinobot_interface_node
arduinobot_ws/devel/lib/arduinobot_controller/: angles_converter  angles_converters_cpp  arduinobot_interface_node
arduinobot_ws/devel/lib/arduinobot_pub_sub/: simple_cpp_publisher  simple_cpp_server  simple_cpp_service_client  simple_cpp_service_server  simple_cpp_subscriber  simple_cpp_timer
arduinobot_ws/src/arduinobot_contol/: CMakeLists.txt
arduinobot_ws/src/arduinobot_controller/: CMakeLists.txt  package.xml
arduinobot_ws/src/arduinobot_controller/config/: joint_state_controller.yaml  trajectory_controllers.yaml
arduinobot_ws/src/arduinobot_controller/include/: arduinobot_interface.h
arduinobot_ws/src/arduinobot_controller/include/arduinobot_controller/: arduinobot_interface.h
arduinobot_ws/src/arduinobot_controller/launch/: arduinobot_controller.launch  controller.launch
arduinobot_ws/src/arduinobot_controller/src/: angles_converter.cpp  arduinobot_interface.cpp
arduinobot_ws/src/arduinobot_controller/srv/: AnglesConverter.srv
arduinobot_ws/src/arduinobot_description/: CMakeLists.txt  package.xml
arduinobot_ws/src/arduinobot_moveit/: .setup_assistant  package.xml
arduinobot_ws/src/arduinobot_pub_sub/: CMakeLists.txt  package.xml
arduinobot_ws/src/arduinobot_pub_sub/action/: Fibonacci.action
arduinobot_ws/src/arduinobot_pub_sub/config/: simple_configuration.yaml
arduinobot_ws/src/arduinobot_pub_sub/src/: simple_action_server.cpp  simple_publisher.cpp  simple_service_client.cpp  simple_service_server.cpp  simple_subscriber.cpp  simple_timer.cpp
arduinobot_ws/src/arduinobot_pub_sub/srv/: AddTwoInts.srv
arduinobot_ws/src/arduinobot_remote/: CMakeLists.txt
(+149 files in other folders)
